--- a/math-service/src/main/resources/bootstrap.yml
+++ b/math-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: examinator-service
+    name: math-service
   cloud.config:
     uri: http://localhost:8181
     fail-fast: false
