--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -7,8 +7,6 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>config-service</name>
-
 	<parent>
 		<groupId>com.itimoshin</groupId>
 		<artifactId>spring-cloud-mastering</artifactId>
@@ -50,6 +48,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.1.0.RELEASE</version>
 			</plugin>
 		</plugins>
 	</build>
