--- a/math-service/pom.xml
+++ b/math-service/pom.xml
@@ -61,6 +61,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>exam-starter</artifactId>
+			<version>2.1.0.RELEASE</version>
+		</dependency>
 
 	</dependencies>
 
